Added further filters to get all
